--- a/styles/main_page.css
+++ b/styles/main_page.css
@@ -22,36 +22,11 @@ body, td, th {
   flex-wrap: wrap;
   max-width: 1010px;
   width: 100%;
-  margin: 0 auto;}
+  margin-left: 30px;}
 
 .gallery > .col2 {
   margin-left: 30px;
 }
-
-#titles_body {
-	display: inline-block;
-	margin-left: 30px;
-}
-#titles_body_hide {
-	display: none;
-}
-#more_button{
-	height: 35px;
-	width: 220px;
-	margin-top: 50px;
-	margin-left: 15px;
-	border: thin solid #696969;
-	text-align: center;
-	line-height: 30px;
-	cursor: pointer;
-}
-#more_button:hover {
-	background-color: #FF0086;
-	color:#FFFFFF;
-	border-color:#FFFFFF;
-	
-}
-
 
 
 .titles {
@@ -60,12 +35,7 @@ body, td, th {
 	position: relative;
 	width: 460px;
 }
-.titles_more {
-	display: inherit;
-	margin-top: 30px;
-	position: relative;
-	width: 460px;
-}
+
 .titles_sq {
 	display: inline-block;
 	width: 200px;
@@ -81,15 +51,6 @@ body, td, th {
 	margin-left: 45px;
 	position: relative;
 	text-align: center;
-}
-
-.titles_sq_more {
-	display: inline-block;
-	width: 200px;
-	height:200px;
-	margin-top: 30px;
-	position: relative;
-	text-align:center;
 }
 .name_block {
 	height: 50px;
@@ -122,39 +83,6 @@ body, td, th {
 }
 
 
-.main_title {
-	width: 470px;
-	position: absolute;
-	top: 10px;
-	text-align: left;
-	}
-
-
-#all_but {
-	display: inline-block;
-	position: absolute;
-	height: 50px;
-	margin-left: 60px;
-	}
-.head_but {
-	width: 100px;
-	height: 50px;
-	line-height: 50px;
-	display: inline-block;
-	color: #909090;
-	font-family: 'Roboto', sans-serif;
-	font-size: 18px;
-	font-weight: 300;
-	text-align: center;
-	margin-top: 24px;
-	margin-left: 50px;
-	cursor:pointer;
-}
-.head_but:hover {
-	background-color: #FF0086;
-	color: #FFFFFF;
-	font-weight: 400;
-}
 .sign {
 	margin-left: 825px;
 	margin-top: 30px;
