--- a/styles/main_page.css
+++ b/styles/main_page.css
@@ -75,21 +75,42 @@ body, td, th {
 	width: 460px;
 }
 
+.titles img.tiles {
+	width: 100%;
+	height: auto;
+	display: block;
+	object-fit: cover;
+}
+
 .titles_sq {
 	display: inline-block;
-	width: 200px;
-	height:200px;
+	width: 215px;
+	height: 200px;
 	position: relative;
-	text-align:center;
+	text-align: center;
+}
+
+.titles_sq img.tiles {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	display: block;
 }
 
 .titles_sq_2 {
 	display: inline-block;
-	width: 200px;
+	width: 215px;
 	height: 200px;
-	margin-left: 45px;
+	margin-left: 30px;
 	position: relative;
 	text-align: center;
+}
+
+.titles_sq_2 img.tiles {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	display: block;
 }
 .name_block {
 	height: 50px;
