--- a/styles/common.css
+++ b/styles/common.css
@@ -89,3 +89,17 @@ h6 {
 	text-decoration: underline;
 }
 
+.page-exit-link {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    text-decoration: underline;
+    font-size: 24px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    color: #000;
+    cursor: pointer;
+}
+
+
+
